--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
             <h1 id="counterHeader">Pomodoro</h1> 
             <span id="pomodoroCounterDisplay">00:00</span> 
             <span id="pomodoroDescription">Set a focus time</span> 
-            <!-- List of Errors --> <span id="pomodoroErrorList"></span> 
+            <!-- List of Errors --> 
+            <span id="pomodoroErrorList"></span> 
             <form class="pomorodoForm">
                 <div class="timeBlock"> 
                     <input type="text" id="minutesInputText" name="minute" /><span>:</span > 
                     <input type="text" id="secondsInputText" name="second" required />
                 </div>
                 <button type="button" id="pomorodoForm-addBtn" disabled>Add</button>
-                <button type="button" id="pomorodoForm-StartPauseBtn" disabled> Start</button> 
+                <button type="button" id="pomorodoForm-StartPauseBtn"> Start</button> 
             </form> 
             <div id="PomodoroList"></div>
         </section>
-        <script src="index.js" type="text/javascript"></script>
+        <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
