--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Pomodoro App</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="/style.css"/>
     </head>
     <body>
         <section id="pomodoro-app"> 
@@ -14,14 +14,14 @@
             <span id="pomodoroErrorList"></span> 
             <form class="pomorodoForm">
                 <div class="timeBlock"> 
-                    <input type="text" id="minutesInputText" name="minute" /><span>:</span > 
-                    <input type="text" id="secondsInputText" name="second" required />
+                    <input type="text" id="minutesInputText" name="minute" maxlength="2"/><span>:</span > 
+                    <input type="text" id="secondsInputText" name="second" maxlength="2" required />
                 </div>
                 <button type="button" id="pomorodoForm-addBtn" disabled>Add</button>
-                <button type="button" id="pomorodoForm-StartPauseBtn"> Start</button> 
+                <button type="button" id="pomorodoForm-StartPauseBtn" start-pause-state="start" disabled> Start</button> 
             </form> 
             <div id="PomodoroList"></div>
         </section>
-        <script src="script.js" type="text/javascript"></script>
+        <script src="/script.js" type="text/javascript"></script>
     </body>
 </html>
