--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <input type="text" id="secondsInputText" name="second" maxlength="2" required />
                 </div>
                 <button type="button" id="pomorodoForm-addBtn" disabled>Add</button>
-                <button type="button" id="pomorodoForm-StartPauseBtn" start-pause-state="start" disabled> Start</button> 
+                <button type="button" id="pomorodoForm-StartPauseBtn" disabled> Start</button> 
             </form> 
             <div id="PomodoroList"></div>
         </section>
